[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project"
version = "0.0.1"
authors = [
    { name = "IMAbril", email = "devabrilibarra@gmail.com" }
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn"
]
readme = "README.md"

[tool.setuptools]
packages = ["src"] 